enavle font awesome

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,8 @@
 	<meta name="description" content="Decred Blocks. View detailed information on all decred transactions and block. {{ $root.title + $root.titleDetail }}">
 	<link rel="shortcut icon" href="/img/icons/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="/css/local-fonts.css">
-	<link rel="stylesheet" href="/css/main.min.css">
+  <link rel="stylesheet" href="/css/main.min.css">
+  <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 </head>
 <body ng-cloak class="ng-cloak">
   <div>
