take bad javascript out of metadata

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
 	<meta name="fragment" content="!">
 	<title data-ng-bind="$root.title + $root.titleDetail + ' | Hx Block Explorer'">Hx Block Explorer</title>
 	<meta name="keywords" content="Hx, bitcoins, transactions, blocks, address, block chain, best block, mining difficulty, hash serialized">
-	<meta name="description" content="Hx Blocks. View detailed information on all Hx transactions and block. {{ $root.title + $root.titleDetail }}">
+	<meta name="description" content="Hx Blocks. View detailed information on all Hx transactions and block.">
 	<link rel="shortcut icon" href="/img/icons/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="/css/local-fonts.css">
   <link rel="stylesheet" href="/css/main.min.css">
