--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,12 @@
 	<link rel="stylesheet" href="/css/local-fonts.css">
   <link rel="stylesheet" href="/css/main.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+  <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script>
+    $(document).ready(function() {
+      $("body").tooltip({ selector: '[data-toggle=tooltip]' });
+    });
+  </script>
 </head>
 <body ng-cloak class="ng-cloak">
   <div>
